Atualizações no CSS versão desktop

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <img src="images/image-product-desktop.jpg">
       </picture>
       <div class="conteudo">
-        <p>PERFUME</p>
+        <div class="titulo"><p>PERFUME</p></div>
         <h1>Gabrielle Essence Eau De Parfum</h1>
-        <p>A floral, solar and voluptuos interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+        <div class="paragrafo"><p>A floral, solar and voluptuos interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p></div>
         <div class="precos">
-          <p>$149.99</p>
+          <div class="preco-por"><p>$149.99</p></div>
           <p>$169.99</p>
         </div>
         <div class="button">
